--- a/requirements.txt
+++ b/requirements.txt
@@ -5,32 +5,50 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==24.2.0
+beautifulsoup4==4.12.3
 certifi==2024.8.30
 charset-normalizer==3.3.2
+-e git+https://github.com/pratigya2/Chatbot-LLamaIndex@81cf9142891dc40b3e4afd957b07c753cc82e6e3#egg=Chatbot_llamaindex
 click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
 dataclasses-json==0.6.7
 Deprecated==1.2.14
 dirtyjson==1.0.8
 distro==1.9.0
+fastembed==0.3.6
 filelock==3.15.4
+flatbuffers==24.3.25
 frozenlist==1.4.1
 fsspec==2024.6.1
 greenlet==3.0.3
+grpcio==1.66.1
+grpcio-tools==1.66.1
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
 httpcore==1.0.5
 httpx==0.27.2
 huggingface-hub==0.23.5
+humanfriendly==10.0
+hyperframe==6.0.1
 idna==3.8
 Jinja2==3.1.4
 jiter==0.5.0
 joblib==1.4.2
 llama-index-core==0.11.3
+llama-index-embeddings-fastembed==0.2.0
+llama-index-embeddings-huggingface==0.3.1
 llama-index-embeddings-openai==0.2.3
 llama-index-llms-huggingface==0.3.1
 llama-index-llms-huggingface-api==0.2.0
+llama-index-readers-file==0.2.0
+llama-index-vector-stores-qdrant==0.3.0
+loguru==0.7.2
 MarkupSafe==2.1.5
 marshmallow==3.22.0
+minijinja==2.2.0
+mmh3==4.1.0
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
@@ -38,22 +56,43 @@ nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.9.1
 numpy==1.26.4
+onnx==1.16.2
+onnxruntime==1.19.0
 openai==1.43.0
 packaging==24.1
+pandas==2.2.2
 pillow==10.4.0
+portalocker==2.10.1
+protobuf==5.28.0
 psutil==6.0.0
 pydantic==2.8.2
 pydantic_core==2.20.1
+pypdf==4.3.1
+pyreadline3==3.4.1
+PyStemmer==2.2.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+pywin32==306
 PyYAML==6.0.2
+qdrant-client==1.11.1
 regex==2024.7.24
 requests==2.32.3
 safetensors==0.4.4
+scikit-learn==1.5.1
+scipy==1.14.1
+sentence-transformers==3.0.1
 setuptools==74.0.0
+six==1.16.0
 sniffio==1.3.1
+snowballstemmer==2.2.0
+soupsieve==2.6
 SQLAlchemy==2.0.32
+striprtf==0.0.26
 sympy==1.13.2
 tenacity==8.5.0
 text-generation==0.7.0
+threadpoolctl==3.5.0
 tiktoken==0.7.0
 tokenizers==0.19.1
 torch==2.4.0
@@ -61,8 +100,8 @@ tqdm==4.66.5
 transformers==4.44.2
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.2
+win32-setctime==1.1.0
 wrapt==1.16.0
 yarl==1.9.4
-python-dotenv
--e .
